<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="220dp"
        android:layout_height="140dp"
       android:layout_marginTop="67dp"
        android:src="@drawable/bg"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/say"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/bg"
        android:text="@string/welcome"
        android:textColor="#7E7A7A"
        android:textSize="19sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        />

    <TextView
        android:id="@+id/hello"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:textSize="19sp"
      android:layout_centerHorizontal="true"
        android:layout_below="@+id/say"
        android:text="@string/bu"
        android:textColor="#7E7A7A"
        android:textStyle="bold|italic"
         />

    <Button
        android:id="@+id/button1"
        android:layout_below="@+id/hello"

        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/driver"
        android:textSize="20sp"
        android:backgroundTint="#2196F3"/>



</RelativeLayout>