<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/bus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/welcom"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/bus"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="290dp"
        android:layout_height="59dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:drawableTint="#66B807"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="18dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:paddingBottom="10dp"
        android:textColor="#706E6E"
        android:textSize="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="290dp"
        android:layout_height="59dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:drawableTint="#FF9800"
        android:ems="10"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:drawablePadding="7dp"
        android:textColor="@color/black"
        android:visibility="visible"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        />

    <!-- Buttons and other views go here -->
    <!-- Continue from the previous code -->

    <Button
        android:id="@+id/button"
        android:layout_width="290dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2196F3"
        android:text="@string/passenger"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="290dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#2196F3"
        android:text="@string/driver1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="40dp"
        android:text="@string/user"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/signup"
        android:textColor="#2196F3"
        android:textSize="21sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


