<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:id="@+id/amazonName"
            android:text="@string/bus"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/amazonImage"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/amazonDesc"
            android:text="@string/nav"
            android:textSize="12sp"
            android:layout_marginStart="18dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amazonName"
            app:layout_constraintEnd_toStartOf="@+id/amazonImage"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:id="@+id/amazonImage"
            android:src="@drawable/bus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/amazonName"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amazonImage">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/clothingCard"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/clothingName"
                        android:text="@string/search"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/clothingImage"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/clothingImage"
                        android:src="@drawable/baseline_directions_railway_filled_24"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/elecName"
                        android:text="@string/nearby"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/elecImage"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/elecImage"
                        android:src="@drawable/baseline_place_24"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row2"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row1">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp"
                android:id="@+id/contact">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/homeName"
                        android:text="@string/Contact"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/homeImage"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/homeImage"
                        android:src="@drawable/phone"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp"
                android:id="@+id/reminder">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/beautyName"
                        android:text="@string/set"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/beautyImage"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/beautyImage"
                        android:src="@drawable/baseline_notification_important_24"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row3"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row2">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp"
                android:id="@+id/schedule">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pharmName"
                        android:text="@string/dest"
                        android:textSize="20sp"
                        android:textColor="@color/black"

                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/pharmImage"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/pharmImage"
                        android:src="@drawable/search_"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                android:id="@+id/logout"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/grocName"
                        android:text="@string/logout"
                        android:textSize="20sp"
                        android:textColor="@color/black"

                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/grocImage"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/grocImage"
                        android:src="@drawable/logout"
                        android:backgroundTint="@color/teal_200"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.drawerlayout.widget.DrawerLayout>
