<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/bus"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/join"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/community"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/community"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join" />

    <EditText
        android:id="@+id/inputuser"
        android:layout_width="275dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/baseline_person_2_24"
        android:drawableTint="#9C27B0"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:drawablePadding="10dp"
        android:paddingBottom="10dp"
        android:textColor="#706E6E"
        android:textSize="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/community"
        />

    <EditText
        android:id="@+id/inputemail"
        android:layout_width="275dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:drawableTint="#66B807"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:drawablePadding="10dp"
        android:textColor="#706E6E"
        android:textSize="19dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputuser"
        />

    <EditText
        android:id="@+id/inputpassword"
        android:layout_width="275dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:drawableTint="#FF9800"
        android:ems="10"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:drawablePadding="7dp"
        android:textColor="@color/black"
        android:visibility="visible"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputemail"
        />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="275dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:drawableLeft="@android:drawable/stat_sys_phone_call"
        android:drawableTint="#3F51B5"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:drawablePadding="10dp"
        android:textColor="@color/black"
        android:visibility="visible"
        android:hint="Phone Number"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputpassword"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="275dp"
        android:layout_height="43dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="-61dp"
        android:backgroundTint="#2196F3"
        android:ems="10"
        android:text="@string/as_passenger"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPhone"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="275dp"
        android:layout_height="43dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="-61dp"
        android:backgroundTint="#2196F3"
        android:ems="10"
        android:text="@string/as_driver"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
